[tool.poetry]
name = "prodiapy"
version = "4.5"
description = "Package for using Prodia API"
authors = ["zenafey <zenafey@eugw.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
aiohttp = "^3.8.1"
colorama = "^0.4.6"
zenlogger = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"