[tool.poetry]
name = "prodiapy"
version = "5.1.3"
description = "Package for using Prodia API"
authors = ["zenafey <zenafey@eugw.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
aiohttp = "^3.9.1"
zenlogger = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"